# btfv

./: .env  .env.dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml  issue-on-branch.yml
src/: main.py  scraper_main.py  web_main.py
src/scraper/: Dockerfile  custom_errors.py  db_populator.py  extractor.py  file_handler.py  scraper.py  scraping_manager.py  skill_calc.py  team_data.csv
src/shared/config/: settings.py
src/shared/database/: database.py  models.py
src/shared/logging/: logging.py  logging_dev.yaml  logging_prod.yaml  logging_test.yaml
src/web_app/: Dockerfile  __init__.py  main.py
src/web_app/routes/: faq.py  home.py  player_matches.py  player_rankings.py  stats.py  team.py
src/web_app/services/: get_environment.py  player.py  stats.py  team.py
src/web_app/services/data_preparation/: mu_over_time.py
src/web_app/services/graph_creation/: mu_over_time.py
src/web_app/static/: package.json
src/web_app/static/css/: styles.css
src/web_app/static/js/: back-to-top.js  filter.js  menu.js  scroll-progress.js  sort.js
src/web_app/templates/: 404.html  base.html  division_stats.html  faq.html  home.html  player_matches.html  player_rankings.html  season_stats.html  team.html  team_stats.html  team_temp.html
src/web_app/templates/partials/: _stats_toggle.html  _team_select_options.html  _team_stats_details.html  filter.html  player_header.html
