[tool.poetry]
name = "btfv"
version = "0.1.0"
description = ""
authors = ["Martin-Reinhard Eichhorn <reinhard.eichhorn@gmail.com>"]
readme = "README.md"
packages = [{include = "src/scraper"}, {include = "src/shared/config"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pydantic-settings = "^2.5.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pre-commit = "^3.8.0"
ruff = "^0.6.6"
types-requests = "^2.32.0.20240914"
types-beautifulsoup4 = "^4.12.0.20240907"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
mypy_path="src"
